--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Spectrum",
-  "name": "Spectrum",
+  "short_name": "Grindery",
+  "name": "Grindery",
   "icons": [
     {
       "src": "/img/homescreen-icon-57x57.png",
