--- a/package.json
+++ b/package.json
@@ -278,7 +278,7 @@
     "webpack-defaults": "webpack-defaults",
     "process:emails:test": "(cd email-template-scripts && python3 inline-html-emails.py && node sendgrid-sync.js)",
     "process:emails:prod": "(cd email-template-scripts && python3 inline-html-emails.py && node sendgrid-sync.js prod)",
-    "process:emails:send": "(cd email-template-scripts && node send-test-emails.js brian@learn.keyy.org)"
+    "process:emails:send": "(cd email-template-scripts && node send-test-emails.js tdsemakula@gmail.com)"
   },
   "lint-staged": {
     "*.js": [
